--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+3
+version: 1.1.7+17
 
 environment:
   sdk: ^3.5.1
@@ -57,6 +57,8 @@ dependencies:
   audioplayers: ^6.1.0
   flutter_staggered_grid_view: ^0.7.0
   confetti: ^0.8.0
+  firebase_core: ^3.8.1
+  firebase_remote_config: ^5.2.0
 
 dev_dependencies:
   flutter_test:
@@ -67,12 +69,11 @@ flutter_launcher_icons:
   android: "ic_launcher"
   ios: true
   image_path: "assets/images/logo_bg.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/images/logo_bg.png"
+  min_sdk_android: 23 # android min sdk min:16, default 21
+
+
   flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
