--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.8+18
+version: 1.2.3+23
 
 environment:
   sdk: ^3.5.1
@@ -44,7 +44,7 @@ dependencies:
   flip_board: ^1.0.0
   flip_panel_plus: ^1.0.0+3
   slide_countdown: ^1.6.1
-  vibration: ^2.0.1
+  vibration: ^3.1.4
   get_it: ^8.0.0
   google_mobile_ads: ^5.2.0
   hive_flutter: ^1.1.0
@@ -59,6 +59,8 @@ dependencies:
   confetti: ^0.8.0
   firebase_core: ^3.8.1
   firebase_remote_config: ^5.2.0
+  facebook_app_events: ^0.20.1
+  app_links: ^6.4.1
 
 dev_dependencies:
   flutter_test:
