--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ app.*.map.json
 # extras added
 /lib/providers/ads/ad_helper.dart
 /ios/Runner/Location.gpx
+
+# strings
+/android/app/src/main/res/values/strings.xml
